--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -86,21 +85,10 @@ main{
 background-image: linear-gradient( to bottom , blue, rgb(13, 121, 230))
 }
 
-
 div{
-    background-color: aqua;
-    display: flexbox;
-    margin-left: 45%;
     width: 300px;
-   height: 300px;
-   margin-bottom: 30px;
-   border-radius: 20px;
-
+    height: 300px;
+    margin-top: 30px;
+    background-color: aliceblue;
 }
-
-div.lapis{
-    margin-top: 50px;
-    
-}
-
 
