--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ a{
         pointer-events: all;
 
 }
+
     
 }
 /*  tudo isso asssima e do  sistema do menu hamburuer*/
@@ -88,8 +89,21 @@ background-image: linear-gradient( to bottom , blue, rgb(13, 121, 230))
 div{
     width: 300px;
     height: 300px;
-    margin-top: 30px;
+    margin-bottom: 30px;
     background-color: aliceblue;
+    display: inline-flex;
+    flex-direction: column;
+    margin-left: 50%;
+    margin-right: 50%;
+    transform: translate(-50%,-50%);
     
+    
+    
+    
+    
+}
+.lapis{
+    margin-top: 300px;
+
 }
 
