--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background-image: linear-gradient( to bottom , blue, rgb(13, 121, 230));
+    background-color: #F2C8C4;;
     text-align: center;
 
 }
@@ -11,7 +11,7 @@ a{
     font-family: sans-serif;
 }
 .header{
-    background-color: rgb(252, 160, 158);
+    background-color: #F2C8C4;
     padding-inline: 16px;
     height: 90px;
 
@@ -24,7 +24,7 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(252, 160, 158);
+    background-color:#F2C8C4;
     
 }
 .nav-list{
@@ -63,7 +63,7 @@ a{
         left: 0;
         width: 100vw;
         height: 100vh;
-        background-color: red;
+        background-color:#F2C8C4;
         clip-path: circle(100px at 90% -15%);
         transition: 1s ease-out;
 
@@ -83,19 +83,20 @@ a{
 }
 /*  tudo isso asssima e do  sistema do menu hamburuer*/
 main{
-background-image: linear-gradient( to bottom , blue, rgb(13, 121, 230))
+background-image: linear-gradient( to bottom ,#45b5fa,#3b7085)
 }
 
 div{
     width: 300px;
     height: 300px;
     margin-bottom: 30px;
-    background-color: aliceblue;
+    background-color:#2466f4;
     display: inline-flex;
     flex-direction: column;
     margin-left: 50%;
     margin-right: 50%;
     transform: translate(-50%,-50%);
+    border-radius: 30px;
     
     
     
