--- a/style.css
+++ b/style.css
@@ -3,15 +3,16 @@
     padding: 0;
 }
 body{
-    background-color:rgb(83, 168, 233);
+    background-color:#19a6e8;
     text-align: center;
 
 }
 a{
     font-family: sans-serif;
+    margin: 20px;
 }
 .header{
-    background-color: #f7e2e0;
+    background-color:#19a6e8;
     padding-inline: 16px;
     height: 90px;
 
@@ -24,7 +25,7 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #f7e2e0;
+    background-color:#19a6e8;
     
 }
 .nav-list{
@@ -63,7 +64,7 @@ a{
         left: 0;
         width: 100vw;
         height: 100vh;
-        background-color:#F2C8C4;
+        background-color:#19a6e8;
         clip-path: circle(100px at 90% -15%);
         transition: 1s ease-out;
 
