--- a/style.css
+++ b/style.css
@@ -96,6 +96,13 @@ img{
     border-radius: 20px;
     
 }
+#img-main{
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    margin-top: 30px;
+    
+}
 main{
     
     
@@ -107,7 +114,7 @@ div{
     width: 300px;
     height: 300px;
     margin-bottom: 100px;
-    background-color:#3BACD9;
+    background-color:#36c4fc;
     display: inline-flex;
     flex-direction: column;
     margin-left: 50%;
@@ -117,6 +124,11 @@ div{
 }
 h1{
 
+}
+#servico , p{
+    margin-top: 20PX;
+    color: white;
+    font-size: 2EM;
 }
 .lapis{
     margin-top: 300px;
