--- a/style.css
+++ b/style.css
@@ -97,9 +97,9 @@ img{
     
 }
 #img-main{
-    width: 50px;
-    height: 50px;
-    border-radius: 20px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
     margin-top: 50px;
     
 }
@@ -128,7 +128,7 @@ h1{
 #servico , p{
     margin-top: 20PX;
     color: white;
-    font-size: 2EM;
+    font-size: 2em;
 }
 .lapis{
     margin-top: 300px;
