--- a/style.css
+++ b/style.css
@@ -126,9 +126,10 @@ h1{
 
 }
 #servico , p{
-    margin-top: 20PX;
+    margin-top: 20px;
     color: white;
     font-size: 2em;
+
 }
 .lapis{
     margin-top: 300px;
