--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ div{
     height: 300px;
     margin-bottom: 100px;
     background-color:#36c4fc;
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     margin-left: 50%;
     margin-right: 50%;
