--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
  @charset "utf-8";
 
- @import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
 
 *{
     margin: 0;
@@ -16,7 +16,8 @@
 body{
     background-color:#36c4fc;
     text-align: center;
-    font-family: Playball, Arial, Helvetica, sans-serif;
+    font-family:Caveat , Arial, Helvetica, sans-serif;
+    font-size: x-large;
     
    
 }
@@ -138,7 +139,7 @@ div{
     border-radius: 30px;
 }
 h1{
-    font-size: 4em;
+    font-size: 3em;
 }
 #servico , p{
     margin-top: 20px;
