--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
  @charset "utf-8";
 
- @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Liu+Jian+Mao+Cao&family=Playwrite+BE+WAL:wght@100..400&family=Playwrite+DK+Loopet:wght@100..400&family=Playwrite+SK:wght@100..400&display=swap');
 
 *{
     margin: 0;
@@ -16,8 +16,8 @@
 body{
     background-color:#36c4fc;
     text-align: center;
-    font-family:Caveat , Arial, Helvetica, sans-serif;
-    font-size: x-large;
+    font-family: Playwrite BE WAL, Arial, Helvetica, sans-serif;
+
     
    
 }
@@ -139,7 +139,7 @@ div{
     border-radius: 30px;
 }
 h1{
-    font-size: 3em;
+    font-size: 2em;
 }
 #servico , p{
     margin-top: 20px;
