--- a/style.css
+++ b/style.css
@@ -141,7 +141,11 @@ div{
     transform: translate(-50%,-50%);
     border-radius: 30px;
 }
-h1{
+section{
+    background-color: rgba(0, 0, 0, 0.3);
+    margin-bottom: 30px;
+}
+h1,h3{
     font-size: 3em;
 }
 #servico , p{
